[workspace]
members = [
  "rocketmq",
  "rocketmq-auth",
  "rocketmq-broker",
  "rocketmq-cli",
  "rocketmq-client",
  "rocketmq-common",
  "rocketmq-controller",
  "rocketmq-error",
  "rocketmq-example",
  "rocketmq-filter",
  "rocketmq-macros",
  "rocketmq-namesrv",
  "rocketmq-proxy",
  "rocketmq-remoting",
  "rocketmq-runtime",
  "rocketmq-store",
  "rocketmq-tools",
  "rocketmq-tui",
]
resolver = "2"

[workspace.package]
version = "0.8.0"
authors = ["mxsm <mxsm@apache.org>"]
edition = "2021"
homepage = "https://github.com/mxsm/rocketmq-rust"
repository = "https://github.com/mxsm/rocketmq-rust"
license = "MIT OR Apache-2.0"
keywords = [
  "apache-rocketmq",
  "rocketmq-rust",
  "rocketmq-rs",
  "rust",
  "rocketmq-client",
]
categories = ["asynchronous", "network-programming", "development-tools"]
readme = "README.md"
description = """
Unofficial Rust implementation of Apache RocketMQ
"""
rust-version = "1.85.0"
[workspace.dependencies]
rocketmq-common      = { version = "0.8.0", path = "./rocketmq-common" }
rocketmq-runtime     = { version = "0.8.0", path = "./rocketmq-runtime" }
rocketmq-macros      = { version = "0.8.0", path = "./rocketmq-macros" }
rocketmq-rust        = { version = "0.8.0", path = "./rocketmq" }
rocketmq-filter      = { version = "0.8.0", path = "./rocketmq-filter" }
rocketmq-store       = { version = "0.8.0", path = "./rocketmq-store", default-features = true }
rocketmq-remoting    = { version = "0.8.0", path = "./rocketmq-remoting" }
rocketmq-client-rust = { version = "0.8.0", path = "./rocketmq-client" }
rocketmq-tools       = { version = "0.8.0", path = "./rocketmq-tools" }
rocketmq-error       = { version = "0.8.0", path = "./rocketmq-error" }
rocketmq-auth        = { version = "0.8.0", path = "./rocketmq-auth" }

tokio        = { version = "1.49", features = ["full"] }
tokio-util   = { version = "0.7.18", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["full"] }

tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["time"] }
tracing-appender   = "0.2.4"

thiserror = "2.0.17"


#serde
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
serde_yaml         = "0.9"
serde_json_any_key = "2.0.0"
anyhow             = "1.0.100"
bytes              = "1.11.0"
rand               = "0.9.2"
lazy_static        = "1.5.0"
num_cpus           = "1.17"

config = "0.15.19"

parking_lot   = "0.12"
dirs          = "6.0"
trait-variant = "0.1.2"

once_cell = "1.21.3"

mockall = "0.14.0"
cfg-if  = "1.0.4"

sysinfo = "0.37.2"
uuid = { version = "1.19.0", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics",
] }


futures = "0.3"

cheetah-string = { version = "1.0.1", features = ["serde", "bytes", "simd"] }

flate2  = "1.1.7"
dashmap = "6.1.0"
strum   = { version = "0.27.2", features = ["derive"] }

opentelemetry     = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio"] }
