[package]
name = "namesrv"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocketmq-common = { version = "0.1.0", path = "../common" }
rocketmq-remoting = { version = "0.1.0", path = "../remoting" }


anyhow.workspace = true
env_logger.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

#json spupport
serde.workspace = true
serde_json.workspace = true

futures-core = "0.3.0"
futures-sink = "0.3.0"
futures-io = { version = "0.3.0"}
futures-util = { version = "0.3.0"}
futures = "0.3.29"
bytes = "1.5.0"