[package]
name = "rocketmq-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
rocketmq-common = { version = "0.2.0", path = "../rocketmq-common" }
rocketmq-store = { version = "0.2.0", path = "../rocketmq-store" }


clap = { version = "4.2.7", features = ["derive"] }
tabled = "0.15.0"
[[bin]]
name = "rocketmq-cli-rust"
path = "src/bin/rocketmq_cli.rs"
