[package]
name = "rocketmq-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
rocketmq-common = { workspace = true }
rocketmq-store = { workspace = true }


clap = { version = "4.5.19", features = ["derive"] }
tabled = "0.16.0"
bytes = { workspace = true }
[[bin]]
name = "rocketmq-cli-rust"
path = "src/bin/rocketmq_cli.rs"
