[package]
name = "rocketmq-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
rocketmq-rust = { workspace = true }
rocketmq-common = { workspace = true }
rocketmq-remoting = { workspace = true }
rocketmq-runtime = { workspace = true }

thiserror = { workspace = true }

#json spupport
serde.workspace = true
serde_json.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true

trait-variant = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
lazy_static = { workspace = true }

#log
tracing.workspace = true
tracing-subscriber.workspace = true
regex = { version = "1.10.6", features = [] }

parking_lot = { workspace = true }

[[example]]
name = "simple-producer"
path = "examples/producer/simple_producer.rs"

[[example]]
name = "producer"
path = "examples/quickstart/producer.rs"

[[example]]
name = "simple-batch-producer"
path = "examples/batch/simple_batch_producer.rs"


[[example]]
name = "callback-batch-producer"
path = "examples/batch/callback_batch_producer.rs"

