# Copyright 2023 The RocketMQ Rust Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name                   = "rocketmq-client-rust"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords               = ["rocketmq-rust", "async", "rocketmq-client", "futures"]
categories             = ["api-bindings", "asynchronous"]
readme                 = "README.md"
description            = "Rust implementation of Apache rocketmq client"
rust-version.workspace = true

[dependencies]
rocketmq-rust            = { workspace = true }
rocketmq-common          = { workspace = true }
rocketmq-remoting        = { workspace = true }
rocketmq-runtime         = { workspace = true }
rocketmq-error.workspace = true

#json spupport
serde.workspace      = true
serde_json.workspace = true

tokio.workspace      = true
tokio-util.workspace = true

trait-variant = { workspace = true }
num_cpus      = { workspace = true }
rand          = { workspace = true }

#log
tracing.workspace = true

parking_lot = { workspace = true }
bytes       = { workspace = true }
dashmap     = { workspace = true }
smallvec    = { workspace = true }

futures        = { workspace = true }
cheetah-string = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }

[[bench]]
name    = "produce_accumulator_benchmark"
harness = false

[[bench]]
name    = "concurrent_optimization_benchmark"
harness = false

[[bench]]
name    = "thread_local_index_bench"
harness = false

[[example]]
name = "simple-producer"
path = "examples/producer/simple_producer.rs"

[[example]]
name = "producer"
path = "examples/quickstart/producer.rs"

[[example]]
name = "simple-batch-producer"
path = "examples/batch/simple_batch_producer.rs"


[[example]]
name = "callback-batch-producer"
path = "examples/batch/callback_batch_producer.rs"

[[example]]
name = "request-producer"
path = "examples/rpc/request_producer.rs"

[[example]]
name = "request-callback-producer"
path = "examples/rpc/request_callback_producer.rs"

[[example]]
name = "consumer"
path = "examples/quickstart/consumer.rs"

[[example]]
name = "broadcast-consumer"
path = "examples/broadcast/push_consumer.rs"

[[example]]
name = "ordermessage-producer"
path = "examples/ordermessage/ordermessage_producer.rs"

[[example]]
name = "ordermessage-consumer"
path = "examples/ordermessage/ordermessage_consumer.rs"

[[example]]
name = "transaction-producer"
path = "examples/transaction/transaction_producer.rs"

[[example]]
name = "pop-consumer"
path = "examples/consumer/pop_consumer.rs"
