[package]
name = "rocketmq-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Rust implementation of Apache rocketmq common"
rust-version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
async_fs = ["tokio/fs"]

[dependencies]
rocketmq-rust = { workspace = true }
rocketmq-error = { workspace = true, features = ["with_serde", "with_config"] }

anyhow.workspace = true
tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

crc32fast = "1.5.0"

#json spupport
serde.workspace = true
serde_json.workspace = true
num_cpus.workspace = true

#futures
futures = { version = "0.3", features = ["default", "thread-pool"] }

bytes.workspace = true
lazy_static.workspace = true


config.workspace = true

#tools
dirs.workspace = true

flate2 = { version = "1.1.5", features = ["zlib"], default-features = false }
lz4_flex = { version = "0.11", default-features = false }
zstd = "0.13"
byteorder = "1.5.0"

local-ip-address = "0.6.4"
chrono = "0.4.42"

parking_lot = { workspace = true }
once_cell = { workspace = true }
tempfile = "3.23.0"
trait-variant.workspace = true

dashmap = "6.1.0"
hostname = "0.4"
regex = "1.12.2"
thiserror = { workspace = true }

reqwest = { version = "0.12", features = ["blocking", "json"] }
url = "2.5.7"
form_urlencoded = "1.2.2"

uuid = { workspace = true }
cheetah-string = { workspace = true }

[dev-dependencies]
mockall = "0.13.1"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "delete_property"
harness = false

[[bench]]
name = "perm_name"
harness = false